Add page metamodel.html

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,393 @@
   width: 30px;
   height: 30px;
 }
+.IconBoldActive30,
+.active-icon .IconBoldNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconBoldHover30,
+.IconBoldNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -90px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconBoldNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -30px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorLineActive30,
+.active-icon .IconColorLineNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -60px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorLineHover30,
+.IconColorLineNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -180px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorLineNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -220px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorTextActive30,
+.active-icon .IconColorTextNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -30px -220px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorTextHover30,
+.IconColorTextNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -30px -100px;
+  width: 30px;
+  height: 30px;
+}
+.IconColorTextNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -60px -100px;
+  width: 30px;
+  height: 30px;
+}
+.IconConnectingLineActive30,
+.active-icon .IconConnectingLineNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -90px -100px;
+  width: 30px;
+  height: 30px;
+}
+.IconConnectingLineHover30,
+.IconConnectingLineNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -120px -100px;
+  width: 30px;
+  height: 30px;
+}
+.IconConnectingLineNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px 0px;
+  width: 30px;
+  height: 30px;
+}
+.IconCopy30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -30px;
+  width: 30px;
+  height: 30px;
+}
+.IconCopyActive30,
+.active-icon .IconCopy30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -60px;
+  width: 30px;
+  height: 30px;
+}
+.IconCursiveActive30,
+.active-icon .IconCursiveNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -90px;
+  width: 30px;
+  height: 30px;
+}
+.IconCursiveHover30,
+.IconCursiveNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconCursiveNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -30px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconCut30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -60px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconCutActive30,
+.active-icon .IconCut30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -90px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconCutHover30,
+.IconCut30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -120px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconFigureActive30,
+.active-icon .IconFigureNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -130px;
+  width: 30px;
+  height: 30px;
+}
+.IconFigureHover30,
+.IconFigureNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px 0px;
+  width: 30px;
+  height: 30px;
+}
+.IconFigureNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -30px;
+  width: 30px;
+  height: 30px;
+}
+.IconFillActive30,
+.active-icon .IconFillNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -60px;
+  width: 30px;
+  height: 30px;
+}
+.IconFillHover30,
+.IconFillNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -90px;
+  width: 30px;
+  height: 30px;
+}
+.IconFillNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -120px;
+  width: 30px;
+  height: 30px;
+}
+.IconOneColumn50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px 0px;
+  width: 50px;
+  height: 50px;
+}
+.IconOneColumnActive50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -50px 0px;
+  width: 50px;
+  height: 50px;
+}
+.IconOneColumnHover50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -50px;
+  width: 50px;
+  height: 50px;
+}
+.IconPaste30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -100px;
+  width: 30px;
+  height: 30px;
+}
+.IconPasteActive30,
+.active-icon .IconPaste30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -120px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconPasteHover30,
+.IconPaste30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextActive30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -160px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextBottomActive30,
+.active-icon .IconTextBottomNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px 0px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextBottomHover30,
+.IconTextBottomNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -30px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextBottomNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -60px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextCenterActive30,
+.active-icon .IconTextCenterNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -90px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextCenterHover30,
+.IconTextCenterNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -120px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextCenterNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -150px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextHover30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: 0px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextLeftActive30,
+.active-icon .IconTextLeftNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -30px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextLeftHover30,
+.IconTextLeftNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -60px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextLeftNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -90px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextMiddleActive30,
+.active-icon .IconTextMiddleNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -120px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextMiddleHover30,
+.IconTextMiddleNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -150px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextMiddleNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -180px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -210px -190px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextRightActive30,
+.active-icon .IconTextRightNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px 0px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextRightHover30,
+.IconTextRightNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -30px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextRightNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -60px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextTopActive30,
+.active-icon .IconTextTopNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -90px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextTopHover30,
+.IconTextTopNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -120px;
+  width: 30px;
+  height: 30px;
+}
+.IconTextTopNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -240px -150px;
+  width: 30px;
+  height: 30px;
+}
+.IconTwoColumnsActive50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -50px -50px;
+  width: 50px;
+  height: 50px;
+}
+.IconTwoColumnsHover50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -100px 0px;
+  width: 50px;
+  height: 50px;
+}
+.IconTwoColumnsNormal50 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -100px -50px;
+  width: 50px;
+  height: 50px;
+}
+.IconUnderlinedActive30,
+.active-icon .IconUnderlinedNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -60px -220px;
+  width: 30px;
+  height: 30px;
+}
+.IconUnderlinedHover30,
+.IconUnderlinedNormal30:hover {
+  background-image: url("../img/sprite-1.png");
+  background-position: -90px -220px;
+  width: 30px;
+  height: 30px;
+}
+.IconUnderlinedNormal30 {
+  background-image: url("../img/sprite-1.png");
+  background-position: -120px -220px;
+  width: 30px;
+  height: 30px;
+}
 /*****Fonts******/
 @font-face {
   font-family: 'Open Sans Condensed';
@@ -314,8 +701,18 @@ body {
   background-color: #eef1f7;
   color: #2d3b50;
 }
+.displaynone {
+  display: none !important;
+}
+.displayblock {
+  display: block !important;
+}
 a:hover {
   text-decoration: none;
+}
+.bgwhite {
+  background: #fff;
+  border: 1px solid #e2dcdc;
 }
 .bold {
   font-weight: 600;
@@ -362,7 +759,16 @@ a:hover {
 .breadcrumb,
 .page-card-datatable tr td:nth-child(1),
 .main-cont-right-breadcrumb,
-.main-cont-right-breadcrumb-rightpart {
+.main-cont-right-breadcrumb-rightpart,
+.methamodel-head,
+.methamodel-head-item-textPush,
+.methamodel-head-item-textPush-block,
+.methamodel-head-item-textFont-fontRow,
+.methamodel-head-item-textFont-typeRow,
+.methamodel-head-item-textAlign-vertRow,
+.methamodel-head-item-textAlign-horRow,
+.methamodel-head-item-figure,
+.methamodel-head-item-figure-block-cont {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -420,6 +826,9 @@ a:hover {
 }
 .mt85 {
   margin-top: 85px;
+}
+.ml-50 {
+  margin-left: -50px;
 }
 /* ##### Margins ##### */
 .w60per {
@@ -926,6 +1335,174 @@ p {
   background: #fff;
   padding: 20px;
   margin-right: 40px;
+}
+.methamodel-head {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.methamodel-head-item-textPush {
+  width: 200px;
+  height: 130px;
+  -webkit-flex-flow: column;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  border-right: 1px solid #e2dcdc;
+}
+.methamodel-head-item-textPush-block {
+  margin: 5px 0;
+}
+.methamodel-head-item-textPush-block:hover {
+  cursor: pointer;
+}
+.methamodel-head-item-textFont {
+  width: 225px;
+  border-right: 1px solid #e2dcdc;
+  height: 130px;
+  padding: 10px;
+}
+.methamodel-head-item-textFont-fontRow {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.methamodel-head-item-textFont-fontRow select:nth-child(1) {
+  width: 130px;
+}
+.methamodel-head-item-textFont-fontRow select:nth-child(2) {
+  width: 65px;
+}
+.methamodel-head-item-textFont-typeRow {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.methamodel-head-item-textFont-typeRow .circle-button {
+  margin-right: 0;
+}
+.methamodel-head-item-textAlign {
+  padding: 10px;
+  width: 150px;
+  border-right: 1px solid #e2dcdc;
+  height: 130px;
+}
+.methamodel-head-item-textAlign .circle-button {
+  margin-right: 0;
+}
+.methamodel-head-item-textAlign-vertRow {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.methamodel-head-item-textAlign-horRow {
+  margin-top: 20px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.methamodel-head-item-figure {
+  padding: 10px;
+  height: 130px;
+  width: 390px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.methamodel-head-item-figure * {
+  box-sizing: border-box;
+}
+.methamodel-head-item-figure-block {
+  width: 180px;
+  position: relative;
+}
+.methamodel-head-item-figure-block:hover {
+  cursor: pointer;
+}
+.methamodel-head-item-figure-block-cont {
+  width: 160px;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  margin-right: 10px;
+}
+.methamodel-head {
+  border-bottom: 1px solid #e2dcdc;
+}
+.methamodel-content-left {
+  border-right: 1px solid #e2dcdc;
+  height: 600px;
+}
+.methamodel-content-accordion {
+  margin-top: 20px;
+}
+.methamodel-content-right {
+  background: #fff;
+  height: 600px;
+}
+.figure-dropblock {
+  width: 100%;
+  height: 200px;
+  background: #fff;
+  position: absolute;
+  z-index: 100;
+  border: 1px solid #e2dcdc;
+}
+.methamodel-head-item-figure-block-cont {
+  position: relative;
+  padding-right: 20px;
+}
+.methamodel-head-item-figure-block-cont:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #364760;
+  top: 12px;
+}
+.methamodel-head-item-textFont-typeRow-colors {
+  position: relative;
+  padding-right: 10px;
+}
+.methamodel-head-item-textFont-typeRow-colors:before {
+  content: '';
+  position: absolute;
+  right: 3px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #364760;
+  top: 12px;
+}
+.methamodel-head-item-textFont-typeRow-colors .figure-dropblock {
+  width: 100%;
+  height: 200px;
+  background: #fff;
+  position: absolute;
+  z-index: 100;
+  border: 1px solid #e2dcdc;
+  top: 30px;
+  right: 0px;
 }
 /*# sourceMappingURL=css/style.css.map */
 /*# sourceMappingURL=style.css.map */
