--- a/css/vendor.css
+++ b/css/vendor.css
@@ -3716,7 +3716,7 @@ a:hover {
 .breadcrumb {
   padding-left: 50px;
   background: #fff;
-  height: 50px;
+  min-height: 50px;
   margin-left: -55px;
   margin-right: -50px;
   margin-bottom: 0;
@@ -3725,9 +3725,15 @@ a:hover {
       -ms-flex-pack: start;
           justify-content: flex-start;
   color: #2d3b50;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 .breadcrumb a {
   color: #2d3b50;
+}
+.breadcrumb a:hover {
+  color: #26abe2;
 }
 .breadcrumb .active {
   color: #2d3b50;
@@ -4254,8 +4260,14 @@ p {
 .row-catalog-date-pick-toggle:hover:before {
   background: #26abe2 !important;
 }
+.main-cont-right-breadcrumb-leftpart {
+  margin-right: -50px;
+}
 .main-cont-right-breadcrumb-rightpart {
   position: relative;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
 }
 .hidden-table-toggle {
   position: absolute;
